alignment corrected

--- a/project/styles/nutrition.css
+++ b/project/styles/nutrition.css
@@ -727,7 +727,7 @@ dialog button:hover {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2rem;
-    align-items: left;
+    text-align: left;
     justify-content: center; 
 }
 
